--- a/.github/workflows/ci-go-build.yml
+++ b/.github/workflows/ci-go-build.yml
@@ -1,8 +1,8 @@
-name: "CI - Go Build"
+name: 'CI - Go Build'
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
 
 jobs:
@@ -17,11 +17,13 @@ jobs:
           go-version: 1.19
 
       - name: Build
-        run: go build main.go
-        
+        run: |
+          go build main.go
+          mv main build-notifier
+
       - name: Commit
         run: |
           git config --global user.name "GitHub Actions"
-          git add ./main
+          git add ./build-notifier
           git commit -m "Update binary." || echo "No changes to commit"
           git push origin main
