Only build when changes to main.go, for now.

--- a/.github/workflows/ci-go-build.yml
+++ b/.github/workflows/ci-go-build.yml
@@ -3,10 +3,14 @@ name: 'CI - Go Build'
 on:
   push:
     branches: [main]
+    paths:
+      - main.go
+
   workflow_dispatch:
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
