--- a/.github/workflows/ci-go-build.yml
+++ b/.github/workflows/ci-go-build.yml
@@ -1,33 +1,33 @@
-name: 'CI - Go Build'
+name: 'CI - GoReleaser'
 
 on:
   push:
-    branches: [main]
-    paths:
-      - main.go
+    tags:
+      - *
 
-  workflow_dispatch:
+permissions:
+  contents: write
+  packages: write
 
 jobs:
-  build:
-    name: Build
+  goreleaser:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      - name: Set up Go
-        uses: actions/setup-go@v3
         with:
-          go-version: 1.19.3
+          fetch-depth: 0
 
-      - name: Build
-        run: |
-          go build main.go
-          mv main build-notifier
+      - run: git fetch --force --tags
 
-      - name: Commit
-        run: |
-          git config --global user.name "GitHub Actions"
-          git add ./build-notifier
-          git commit -m "Update binary." || echo "No changes to commit"
-          git push origin main
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '>=1.19.3'
+          cache: true
+
+      - uses: goreleaser/goreleaser-action@v2
+        with:
+          distribution: goreleaser
+          version: latest
+          args: release --rm-dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
