--- a/.github/workflows/ci-go-build.yml
+++ b/.github/workflows/ci-go-build.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
       - '*'
+  workflow_dispatch: # Manual trigger.
 
 permissions:
   contents: write
@@ -12,6 +13,11 @@ permissions:
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: ['windows', 'macos', 'linux']
+        arch: ['arm64', 'amd64']
+
     steps:
       - uses: actions/checkout@v3
         with:
@@ -24,10 +30,11 @@ jobs:
           go-version: '>=1.19.3'
           cache: true
 
-      - uses: goreleaser/goreleaser-action@v2
-        with:
-          distribution: goreleaser
-          version: latest
-          args: release --rm-dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Go Build
+        run: |
+          export GOOS=${{ matrix.os }}
+          export GOARCH=${{ matrix.arch }}
+
+          mkdir bin
+          go build -o bin/${{ matrix.os }}-${{ matrix.arch }} main.go
+          ls bin
