Testing upload to release.

--- a/.github/workflows/ci-go-build.yml
+++ b/.github/workflows/ci-go-build.yml
@@ -38,4 +38,9 @@ jobs:
 
           mkdir bin
           go build -o bin/${{ matrix.os }}-${{ matrix.arch }} main.go
-          ls bin
+
+      - name: Upload files to a GitHub release
+        uses: svenstaro/upload-release-action@2.3.0
+        with:
+          tag: ${{ github.ref }}
+          file: bin/${{ matrix.os }}-${{ matrix.arch }}-v$tag
