--- a/.github/workflows/ci-go-build.yml
+++ b/.github/workflows/ci-go-build.yml
@@ -44,4 +44,4 @@ jobs:
         with:
           tag: ${{ github.ref }}
           file: bin/${{ matrix.os }}-${{ matrix.arch }}
-          asset_name: ${{ GITHUB_REPOSITORY }}_$tag-${{ matrix.os }}-${{ matrix.arch }}
+          asset_name: $GITHUB_REPOSITORY_$tag-${{ matrix.os }}-${{ matrix.arch }}
