--- a/action.yml
+++ b/action.yml
@@ -13,8 +13,21 @@ inputs:
     required: true
 
 runs:
-  using: 'node16'
-  main: 'invoke-binary.js'
+  using: 'composite'
+  steps:
+    - name: Setup NodeJS
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
+
+    - name: Install Dependencies
+      run: |
+        npm install
+
+    - name: Run Action
+      run: |
+        node invoke-binary.js
+
 # runs:
 #   using: 'composite'
 #   steps:
