--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,8 @@ inputs:
 runs:
   using: 'composite'
   steps:
+    - uses: actions/checkout@v3
+
     - name: Setup NodeJS
       uses: actions/setup-node@v3
       with:
