--- a/action.yml
+++ b/action.yml
@@ -17,10 +17,11 @@ runs:
   steps:
     - uses: actions/checkout@v3
 
-    - run: |
-      echo body ${{ inputs.body }}
-      echo url ${{ inputs.url }}
-      echo response_code ${{ inputs.response_code }}
+    - name: Echo inputs
+      run: |
+        echo body "${{ inputs.body }}"
+        echo url "${{ inputs.url }}"
+        echo response_code "${{ inputs.response_code }}"
 
     - name: Setup NodeJS
       uses: actions/setup-node@v3
