--- a/action.yml
+++ b/action.yml
@@ -38,21 +38,7 @@ runs:
       run: |
         node invoke-binary.js
       shell: bash
-# runs:
-#   using: 'composite'
-#   steps:
-#     - run: |
-#         export INPUT_BODY=${{ inputs.body }}
-#         export INPUT_URL=${{ inputs.url }}
-#         export INPUT_RESPONSE_CODE=${{ inputs.RESPONSE_CODE }}
-#       shell: bash
-
-#     - name: Set up Go
-#       uses: actions/setup-go@v3
-#       with:
-#         go-version: 1.19.3
-
-#     - name: Run Build Notifier
-#       run: |
-#         go run ./main.go
-#       shell: bash
+      env:
+        BODY: ${{ inputs.body }}
+        URL: ${{ inputs.url }}
+        RESPONSE_CODE: ${{ inputs.response_code }}
