--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -37,7 +37,7 @@ jobs:
 
     steps:
       - name: Action Testing
-        uses: zchryr/build-notifier-action@main
+        uses: zchryr/build-notifier-action@v0.0.2
         with:
           body: ${{ toJSON(needs) }}
           url: ${{ secrets.WEBHOOK_URL }}
