--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,10 @@ inputs:
   repo:
     description: 'Name of the GitHub repo that this action will be operating in.'
     required: true
+  workflow:
+    description: 'The name of the GitHub workflow this action is running from.'
+    required: false
+    default: ${{ github.workflow }}
 
 runs:
   using: 'composite'
