--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -12,6 +12,7 @@ jobs:
       - name: test
         run: |
           echo "test"
+          echo workflow: ${{ github.workflow }}
 
   two:
     name: two
