--- a/.github/workflows/ci-go-build.yml
+++ b/.github/workflows/ci-go-build.yml
@@ -44,3 +44,21 @@ jobs:
           tag: ${{ github.ref }}
           file: bin/${{ matrix.os }}-${{ matrix.arch }}
           asset_name: build-notifier-action_$tag-${{ matrix.os }}-${{ matrix.arch }}
+
+  notification:
+    needs: [build]
+    if: always()
+    name: Send Build Notification
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Action Testing
+        uses: zchryr/build-notifier-action@v1.0.11
+        with:
+          body: ${{ toJSON(needs) }}
+          url: ${{ secrets.WEBHOOK_URL }}
+          response_code: 201
+          repo: ${{ github.repository }}
+          workflow: $WORKFLOW
+        env:
+          WORKFLOW: ${{ github.workflow }}
